# this_week_in_rust.rs

./: .env.sample  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: image.yml  update.yml
gist-read/: Dockerfile  action.yml  index.js  package.json
src/: bot.rs  html.rs  main.rs  parsers.rs  types.rs
