[package]
name = "this_week_in_rust"
version = "0.2.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"

[dependencies]
reqwest = "=0.8.6"
env_logger = "0.5.12"
select = "0.4.2"
dotenv = "0.13.0"
serde = "1.0.75"
serde_json = "1.0.26"
serde_derive = "1.0.75"
hyper = "=0.11.22"
dirs = "1.0.4"
